<resources>
    <string name="app_name">Book rental</string>
    <string name="title_books">Books</string>
    <string name="title_borrows">Borrows</string>
    <string name="title_messages">Messages</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="book_added">Book added</string>
    <string name="book_edited">Book edited</string>
    <string name="book_archived">Book archived</string>

    <string name="hint_book_title">Title...</string>
    <string name="hint_book_author">Author...</string>
    <string name="hint_book_ISBN">ISBN...</string>
    <string name="hint_book_picture">Picture...</string>
    <string name="hint_book_amount">Amount...</string>
    <string name="hint_email">Email...</string>
    <string name="hint_password">Password...</string>
    <string name="hint_password_confirmation">Confirm password...</string>

    <string name="book_title">Title:&#160;</string>
    <string name="book_author">Author:&#160;</string>
    <string name="book_ISBN">ISBN:&#160;</string>
    <string name="book_picture">Picture:&#160;</string>
    <string name="book_amount">Amount:&#160;</string>

    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_return">Return</string>
    <string name="button_rent_book">Borrow</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

    <string name="delete_pop_up_title">Delete book</string>
    <string name="delete_pop_up_content">Are you sure you want to delete this book?</string>
    <string name="delete_pop_up_confirmation">Delete</string>
    <string name="delete_pop_up_cancelation">Cancel</string>
    <string name="empty_not_saved">Book not saved.</string>

    <string name="borrow_status_label">Status</string>
    <string name="borrow_date_label">Date</string>
    <string name="book_title_label">Title</string>
    <string name="book_ISBN_label">ISBN</string>
    <string name="user_email_label">Email</string>
    <string name="book_details_text">Book details</string>

    <string name="email_empty">Enter email</string>
    <string name="email_not_correct">Enter correct email</string>
    <string name="password_empty">Enter password</string>
    <string name="passwords_not_match">Passwords does not match</string>
    <string name="email_exists">User with this email already exists</string>
    <string name="user_added">New account created</string>
    <string name="wrong_password_or_username">Wrong password or username</string>

    <string name="login_activity">Login</string>
    <string name="register_activity">Register</string>
    <string name="book_details_activity">Book details</string>
    <string name="add_book_activity">Add book</string>
    <string name="edit_book_activity">Edit book</string>

    <string name="borrow_status_edited">Borrow status edited.</string>
    <string name="status_not_changed">There is nothing to change.</string>
    <string name="no_books_with_ISBN">There is no books with this ISBN in magazine.</string>

    <string name="search">Search</string>
    <string name="clear_search">Clear search</string>
</resources>