<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_book_title"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_book_author"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_book_ISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_book_ISBN"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_book_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_book_picture"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_book_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_book_amount"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        android:digits="0123456789"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral_variant0"
        android:text="@string/button_save" />

</LinearLayout>