<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/book_author_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/book_ISBN_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_ISBN"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/book_ISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/book_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_amount"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/book_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_rent_book"
        android:gravity="center"/>

</LinearLayout>